# phc-sdk-py

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  Makefile  README.md  adapter.html  errors.html  files.txt  index.html  package.json  publish.sh  pylint.out  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: deploy-gh-pages.sh
.github/workflows/: pr-branch-build.yml  release.yml
doc/template/: css.mako  logo.mako
easy/: audit_event.html  auth.html  care_plan.html  clinical_impression.html  codeable.html  composition.html  condition.html  consent.html  diagnostic_report.html  document_reference.html  dstu3.html  encounter.html  frame.html  genomic_short_variant.html  genomic_test.html  goal.html  imaging_study.html  immunization.html  index.html  item.html  media.html  medication_administration.html  medication_dispense.html  medication_request.html  medication_statement.html  observation.html  option.html  organization.html  paging_api_item.html  patient_item.html  person.html  practitioner.html  procedure.html  procedure_request.html  projects.html  provenance.html  referral_request.html  sequence.html  specimen.html  util.html
easy/abstract/: fhir_service_item.html  fhir_service_patient_item.html  genomic_variant.html  index.html  paging_api_item.html
easy/data_lake/: index.html
easy/ocr/: block.html  config.html  document.html  document_composition.html  index.html  suggestion.html
easy/omics/: gene.html  gene_set.html  genomic_copy_number_variant.html  genomic_expression.html  genomic_short_variant.html  index.html  (+2 more)
phc/: __init__.py  adapter.py  api_response.py  base_client.py  errors.py  session.py
phc_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
phc_sdk_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
service-schemas/: patient-ml-service.json
services/: agents.html  index.html
tests/: patient_filter_test.py  test_agents.py  test_api_cache.py  test_auth.py  test_base_client_refresh.py  test_clinical_impression.py  test_codeable.py  test_csv_writer.py  test_easy_patient_address.py  test_easy_patient_name.py  test_easy_util.py  test_easy_util_batch_get.py  test_fhir_aggregation.py  test_fhir_dsl_query.py  test_fhir_opensearch_sql.py  test_frame.py  test_genomic_copy_number_variant.py  test_genomic_ingestions.py  test_genomic_short_variant.py  test_genomic_test.py  test_genomic_variant.py  test_option_genomic_expression.py  test_option_genomic_short_variant.py  test_paging_api_item.py  test_patient_filter.py  test_patient_ml.py  test_query.py  test_session.py  test_util_string_case.py
util/: api_cache.html  csv_writer.html  index.html  patient_ml.html  string_case.html
(+203 files in other folders)
